Fix a z-index ordering bug
If the miniature issue overran the collaborator
box, it would hide a section of the bottom border.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -4,6 +4,7 @@
 
 .collaborator-container {
   border-bottom: 1px solid black;
+  z-index: 0;
 }
 
 .collaborator {
